deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
  labels:
    app: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow-container
        image: <your-container-registry>/wisecow:latest
        ports:
        - containerPort: 3000
